[package]
build = "build.rs"
description = "this crate implements the core modules for the concision framework"
name = "concision-params"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]

[package.metadata.release]
no-dev-version = true
tag-name = "v{{version}}"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[dependencies]
concision-init = { workspace = true }
concision-traits = { workspace = true }
# custom
rspace = { workspace = true }
variants = { workspace = true }
# concurrency & parallelism
rayon-core = { optional = true, workspace = true }
# data & serialization
serde = { features = ["derive"], optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# error-handling
anyhow = { workspace = true }
thiserror = { workspace = true }
# mathematics
approx = { optional = true, workspace = true }
ndarray = { workspace = true }
num-complex = { optional = true, workspace = true }
num-traits = { workspace = true }
# random
getrandom = { default-features = false, optional = true, workspace = true }
rand = { optional = true, workspace = true }
rand_core = { optional = true, workspace = true }
rand_distr = { optional = true, workspace = true }

[features]
default = ["std"]

full = [
  "default",
  "approx",
  "complex",
  "json",
  "rand",
  "serde",
]

nightly = [
  "concision-init/nightly",
  "concision-traits/nightly",
]

# ************* [FF:Dependencies] *************
std = [
  "alloc",
  "anyhow/std",
  "concision-init/std",
  "concision-traits/std",
  "ndarray/std",
  "num-complex?/std",
  "num-traits/std",
  "rand?/std",
  "rand_core?/std",
  "rand_distr?/std",
  "rspace/std",
  "serde?/std",
  "thiserror/std",
  "variants/std",
]

wasi = [
  "concision-init/wasi",
  "concision-traits/wasi",
  "rspace/wasi",
]

wasm = [
  "concision-init/wasm",
  "concision-traits/wasm",
  "getrandom?/wasm_js",
  "rayon-core?/web_spin_lock",
  "rspace/wasm",
]

# ************* [FF:Dependencies] *************

alloc = [
  "concision-init/alloc",
  "concision-traits/alloc",
  "rand?/alloc",
  "rand_distr?/alloc",
  "rspace/alloc",
  "serde?/alloc",
  "serde_json?/alloc",
  "variants/alloc",
]

approx = [
  "concision-init/approx",
  "dep:approx",
  "ndarray/approx",
]

blas = [
  "concision-init/blas",
  "ndarray/blas",
]

complex = [
  "dep:num-complex",
  "concision-init/complex",
  "concision-traits/complex",
  "rspace/complex",
]

json = [
  "alloc",
  "rspace/json",
  "serde",
  "serde_json",
]

rand = [
  "dep:rand",
  "dep:rand_core",
  "dep:rand_distr",
  "concision-init/rand",
  "concision-traits/rand",
  "num-complex?/rand",
  "rspace/rand",
]

rayon = [
  "dep:rayon-core",
  "ndarray/rayon",
  "rspace/rayon",
]

rng = [
  "dep:getrandom",
  "rand?/small_rng",
  "concision-init/rng",
]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "concision-init/serde",
  "concision-traits/serde",
  "ndarray/serde",
  "num-complex?/serde",
  "rand?/serde",
  "rand_core?/serde",
  "rand_distr?/serde",
  "rspace/serde",
]

serde_json = ["dep:serde_json"]
