[package]
build = "build.rs"
description = "this crate implements the core modules for the concision framework"
name = "concision-traits"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
doc-scrape-examples = true
features = ["full"]
rustc-args = ["--cfg", "docsrs"]

version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "v{{version}}"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
doc = true
doctest = true
test = true

[[test]]
name = "complex"
required-features = ["complex"]

[dependencies]
# custom
variants = { workspace = true }
# data structures
ndarray = { workspace = true }
# error-handling
anyhow = { workspace = true }
thiserror = { workspace = true }
# macros & utilities
paste = { workspace = true }
# mathematics
approx = { optional = true, workspace = true }
num-complex = { optional = true, workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
# random
getrandom = { optional = true, workspace = true }
rand = { optional = true, workspace = true }
rand_distr = { optional = true, workspace = true }

[features]
default = ["std"]

full = [
  "approx",
  "complex",
  "default",
  "rand",
]

nightly = []

# ************* [FF:Dependencies] *************
std = [
  "alloc",
  "anyhow/std",
  "ndarray/std",
  "num-complex?/std",
  "num-integer/std",
  "num-traits/std",
  "rand?/std",
  "rand?/std_rng",
  "thiserror/std",
]

wasi = []

wasm = ["getrandom?/wasm_js"]
# ************* [FF:Dependencies] *************
alloc = []

approx = ["dep:approx", "ndarray/approx"]

blas = ["ndarray/blas"]

complex = ["dep:num-complex"]

rayon = ["ndarray/rayon"]

rand = [
  "dep:rand",
  "dep:rand_distr",
  "num-complex?/rand",
  "rng",
]

rng = [
  "dep:getrandom",
  "rand?/small_rng",
  "rand?/thread_rng",
]
