[package]
build = "build.rs"
description = "this crate implements the core modules for the concision framework"
name = "concision-traits"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]

[package.metadata.release]
no-dev-version = true
tag-name = "v{{version}}"

[lib]
bench = false
crate-type = ["lib"]
doctest = false
test = true

[[test]]
name = "complex"
required-features = ["complex"]

[dependencies]
# custom
rspace = { workspace = true }
# data structures
hashbrown = { optional = true, workspace = true }
ndarray = { workspace = true }
# macros & utilities
paste = { workspace = true }
# mathematics
approx = { optional = true, workspace = true }
num-complex = { optional = true, workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
# serialization
serde = { optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }

[features]
default = ["std"]

full = [
  "default",
  "approx",
  "complex",
  "hashbrown",
  "rand",
  "serde",
]

nightly = [
  "hashbrown?/nightly",
]

# ********* [FF] Environments *********
std = [
  "alloc",
  "hashbrown?/default",
  "ndarray/std",
  "num-complex?/std",
  "num-integer/std",
  "num-traits/std",
  "rspace/std",
  "serde?/std",
]

wasi = []

wasm = []

# ********* [FF] Dependencies *********
alloc = [
  "hashbrown?/alloc",
  "rspace/alloc",
  "serde?/alloc",
]

approx = [
  "dep:approx",
  "ndarray/approx",
]

blas = ["ndarray/blas"]

complex = [
  "dep:num-complex",
  "rspace/complex",
]

hashbrown = [
  "dep:hashbrown",
  "alloc",
]

rayon = [
  "hashbrown?/rayon",
  "ndarray/rayon",
  "rspace/rayon",
]

rand = [
  "num-complex?/rand",
  "rspace/rand",
]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "serde?/derive",
  "hashbrown?/serde",
  "rspace/serde",
]
