[package]
build = "build.rs"
description = "this crate implements the core modules for the concision framework"
name = "concision-traits"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["default"]
rustc-args = ["--cfg", "docsrs"]

[package.metadata.release]
no-dev-version = true
tag-name = "v{{version}}"

[lib]
bench = false

[[test]]
name = "complex"
required-features = ["complex"]

[dependencies]
# custom
rspace-traits = { workspace = true }
# data structures
hashbrown = { optional = true, workspace = true }
ndarray = { workspace = true }
# macros & utilities
paste = { workspace = true }
# mathematics
approx = { optional = true, workspace = true }
num-complex = { optional = true, workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
# random
rand_core = { optional = true, workspace = true }
# serialization
serde = { optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
# wasmbindgen
wasm-bindgen = { optional = true, workspace = true }

[features]
default = ["std"]

full = [
  "default",
  "approx",
  "complex",
  "hashbrown",
  "rand",
  "serde",
]

autodiff = [
  "nightly",
]

nightly = [
  "hashbrown?/nightly",
]

# ********* [FF] Environments *********
std = [
  "alloc",
  "hashbrown?/default",
  "ndarray/std",
  "num-complex?/std",
  "num-integer/std",
  "num-traits/std",
  "rand_core?/std",
  "rspace-traits/std",
  "serde?/std",
]

wasi = []

wasm = []

# ********* [FF] Dependencies *********
alloc = [
  "hashbrown?/alloc",
  "rspace-traits/alloc",
  "serde?/alloc",
]

approx = [
  "dep:approx",
  "ndarray/approx",
]

blas = ["ndarray/blas"]

complex = [
  "dep:num-complex",
  "rspace-traits/complex",
]

hashbrown = [
  "dep:hashbrown",
  "alloc",
]

rayon = [
  "hashbrown?/rayon",
  "ndarray/rayon",
  "rspace-traits/rayon",
]

rand = [
  "dep:rand_core",
  "num-complex?/rand",
  "rspace-traits/rand",
]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "serde?/derive",
  "hashbrown?/serde",
  "rspace-traits/serde",
]

wasm_bindgen = ["dep:wasm-bindgen"]