[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "concision-math"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies]
concision-linalg = { features = [], path = "../linalg", version = "0.1.12" }
concision-num = { features = [],  path = "../num", version = "0.1.12" }
concision-statistics = { features = [],  path = "../statistics", version = "0.1.12" }

concision-core.workspace = true

ndarray.workspace = true
num.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true

[dev-dependencies]
rand = "0.8"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]