[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "concision-ml"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "neural",
    "optim",
]

full = [
    "neural",
    "nlp",
    "optim",
    "s4",
    "transformers",
]

neural = [
    "concision-neural"
]

nlp = [
    "concision-nlp"
]

optim = [
    "concision-optim",
]

s4 = [
    "concision-s4"
]

transformers = [
    "concision-transformers"
]

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies]
concision-neural = { features = [], optional = true, path = "../neural", version = "0.1.12" }
concision-nlp = { features = [], optional = true, path = "../nlp", version = "0.1.12" }
concision-optim = { features = [], optional = true, path = "../optim", version = "0.1.12" }
concision-s4 = { features = [], optional = true, path = "../s4", version = "0.1.12" }
concision-transformers = { features = [], optional = true, path = "../transformers", version = "0.1.12" }

[dev-dependencies]
anyhow.workspace = true
ndarray.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]