[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "concision-nlp"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []


[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies]

anyhow.workspace = true
finalfusion = "0.18"
ndarray.workspace = true
num.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true
tokenizers = { features = [], version = "0.15" }

[dev-dependencies]
concision-core = { features = [], path = "../../core", version = "0.1.12" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
