[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "concision-s4"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []


[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies]
concision-core = { path = "../../core", version = "0.1.12" }
# concision-data = { path = "../../data" }
concision-neural = { path = "../neural" }

anyhow.workspace = true
faer-core.workspace = true
faer.workspace = true
lazy_static.workspace = true
nalgebra.workspace = true
ndarray.workspace = true
ndarray-conv = "0.2"
# ndarray-linalg.workspace = true
ndarray-rand.workspace = true
ndarray-stats.workspace = true
nshare = "0.9"
num.workspace = true
rustfft = { features = [], version = "6" }
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true

[dev-dependencies]
approx.workspace = true
computare.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
