[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "concision-s4"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["blas"]

blas = [
    # "ndarray/blas",
    # "concision-core/blas",
    # "concision-neural/blas",
]

intel-mkl-system = [
    "blas",
    "ndarray-linalg/intel-mkl-system",
]

intel-mkl-static = [
    "blas",
    "ndarray-linalg/intel-mkl-static",
]

netlib-system = [
    "blas",
    "ndarray-linalg/netlib-system",
]

netlib-static = [
    "blas",
    "ndarray-linalg/netlib-static",
]

openblas-system = [
    "blas",
    "ndarray-linalg/openblas-system",
]

openblas-static = [
    "blas",
    "ndarray-linalg/openblas-static",
]



[lib]
bench = true
crate-type = ["rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies]
concision-core = { features = ["blas"], path = "../../core", version = "0.1.12" }
concision-neural = { features = ["blas"], path = "../neural" }

anyhow.workspace = true
lazy_static.workspace = true
ndarray = { features = ["blas", "serde-1"], version = "0.15" }
ndarray-conv = "0.2"
ndarray-linalg = { features = [], version = "0.16" }
ndarray-rand.workspace = true
ndarray-stats.workspace = true
num.workspace = true
rustfft = { features = [], version = "6" }
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true

[dev-dependencies]
approx.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
