[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "concision-transformers"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = []


[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[build-dependencies]

[dependencies]
concision-core.workspace = true
# concision-data = { path = "../../data" }
concision-neural = { path = "../neural" }

anyhow.workspace = true
lazy_static.workspace = true
ndarray.workspace = true
# ndarray-linalg.workspace = true
ndarray-rand.workspace = true
ndarray-stats.workspace = true
num.workspace = true
serde.workspace = true
serde_json.workspace = true
smart-default.workspace = true
strum.workspace = true

[dev-dependencies]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
