[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "concision-gnn"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "std",
]

full = [
    "default",
    "approx",
    "rand",
    "serde",
]

# ********* [FF] Dependencies *********

alloc = [
    "concision-core/alloc",
]

approx = [
    "dep:approx",
    "concision-core/approx",
    "ndarray/approx-0_5",
]

blas = [
    "concision-core/blas",
    "ndarray/blas",
]

rand = [
    "concision-core/rand",
    "num/rand"
]

serde = [
    "dep:serde",
    "serde-ext",
]

serde-ext = [
    "concision-core/serde",
    "ndarray/serde-1",
    "num/serde"
]



tracing = [
    "dep:tracing",
]

# ********* [FF] Environments *********

std = [
    "concision-core/std",
    "ndarray/std",
    "num/std",
    "serde?/std",
    "strum/std",
]

wasm = [
    "concision-core/wasm",
]

wasi = [    
    "concision-core/wasi",
]

[lib]
bench = false
crate-type = ["lib"]
doctest = true
test = true

[build-dependencies]

[dependencies]
ndarray.workspace = true
num.workspace = true
smart-default.workspace = true
strum.workspace = true

[dependencies.approx]
optional = true
version = "0.5"

[dependencies.concision-core]
default-features = false
path = "../../core"
version = "0.1.14"

[dependencies.serde]
default-features = false
features = ["derive"]
optional = true
version = "1"

[dependencies.tracing]
optional = true
version = "0.1"

[dev-dependencies]
lazy_static.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
