[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "concision-kan"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["std"]

full = ["default", "approx", "rand", "serde"]

# ********* [FF] Dependencies *********

alloc = ["concision-core/alloc"]

approx = ["dep:approx", "concision-core/approx", "ndarray/approx"]

blas = ["concision-core/blas", "ndarray/blas"]

rand = ["concision-core/rand", "num/rand"]

serde = [
    "dep:serde",
    "concision-core/serde",
    "ndarray/serde-1",
    "num/serde",
    "splines/serde",
]


tracing = ["dep:tracing"]

# ********* [FF] Environments *********
std = [
    "concision-core/std",
    "ndarray/std",
    "num/std",
    "serde?/std",
    "splines/std",
    "strum/std",
]

[lib]
bench = false
crate-type = ["lib"]
doctest = true
test = true

[build-dependencies]

[dependencies]
ndarray.workspace = true
num.workspace = true
smart-default.workspace = true
splines = "4"
strum.workspace = true

approx = { optional = true, version = "0.5" }
tracing = { optional = true, version = "0.1" }

[dependencies.concision-core]
default-features = false
path = "../../core"
version = "0.1.16"

[dependencies.serde]
default-features = false
features = ["derive"]
optional = true
version = "1"

[dev-dependencies]
lazy_static.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
