[package]
build = "build.rs"
description = "this crate implements the kan model using the concision framework"
name = "concision-kan"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
doc = true
doctest = true
test = true

[dependencies]
# sdk
concision = { features = ["neural"], workspace = true }
# error
anyhow = { workspace = true }
# mathematics
approx = { optional = true, workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
# logging
tracing = { optional = true, workspace = true }

[features]
default = ["std"]

full = ["default", "rand", "serde", "tracing"]

# ************* [FF:Environments] *************
std = ["concision/std", "ndarray/std", "num-traits/std", "tracing/std"]

wasi = ["concision/wasi"]

wasm = ["concision/wasm"]

# ************* [FF:Dependencies] *************
approx = ["concision/approx", "dep:approx", "ndarray/approx"]

blas = ["concision/blas", "ndarray/blas"]

rand = ["concision/rand"]

rayon = ["concision/rayon", "ndarray/rayon"]

serde = ["concision/serde"]

tracing = ["concision/tracing", "dep:tracing"]
