[package]
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "concision-linear"
readme.workspace = true
repository.workspace = true
version.workspace = true


[features]
default = [
    "std",
]

full = [
    "default",
    "rand",
    "serde",
    "tracing",
]

approx = [
    "dep:approx",
    "concision-core/approx",
    "ndarray/approx-0_5",
]
blas = [
    "concision-core/blas",
    "ndarray/blas",
]

rand = [
    "concision-core/rand",
    "num/rand"
]

# rand = [
#     "concision-core/rand",
#     "dep:ndarray-rand",
#     "num/rand"
# ]


serde = [
    "dep:serde",
    "serde-ext",
]

serde-ext = [
    "dep:serde_json",
    "concision-core/serde",
    "ndarray/serde-1",
    "num/serde"
]

std = [
    "concision-core/std",
    "ndarray/std",
    "num/std",
]

tracing = [
    "dep:tracing",
]

[lib]
bench = false
crate-type = ["lib"]
doctest = true
test = true

[[test]]
name = "model"
required-features = ["rand"]

[build-dependencies]

[dependencies]
concision-core = { features = ["rand"], path = "../../core", version = "0.1.12" }

approx = { optional = true, version = "0.5" }
ndarray = "0.15"
ndarray-rand.workspace = true
ndarray-stats.workspace = true
num.workspace = true
serde = { features = ["derive"], optional = true, version = "1" }
serde_json = { optional = true, version = "1" }
smart-default.workspace = true
strum.workspace = true
tracing = { optional = true, version = "0.1" }

[dev-dependencies]
lazy_static.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]

