[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "concision-linear"
readme.workspace = true
repository.workspace = true
version.workspace = true


[features]
default = ["std"]

full = ["default", "approx", "rand", "serde", "tracing"]

# ********* [FF] Dependencies *********

alloc = ["concision-core/alloc"]

approx = ["dep:approx", "concision-core/approx", "ndarray/approx"]

blas = ["concision-core/blas", "ndarray/blas"]

rand = ["concision-core/rand", "num/rand"]

serde = ["dep:serde", "concision-core/serde", "ndarray/serde-1", "num/serde"]

tracing = ["dep:tracing"]

# ********* [FF] Environments *********
std = [
    "concision-core/std",
    "ndarray/std",
    "num/std",
    "serde?/std",
    "strum/std",
]

[lib]
bench = false
crate-type = ["lib"]
doctest = true
test = true

[[test]]
name = "linear"
required-features = ["std"]

[[test]]
name = "norm"
required-features = ["approx", "std"]

[[test]]
name = "params"
required-features = ["std"]

[build-dependencies]

[dependencies]
concision-core.workspace = true

# shared
ndarray.workspace = true
num.workspace = true
smart-default.workspace = true
strum.workspace = true

# optional
approx = { optional = true, workspace = true }
serde = { default-features = false, optional = true, workspace = true }
tracing = { optional = true, workspace = true }

[dev-dependencies]
lazy_static.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
